public/assets/css/entitieslist.css
/* ... */
.email-nav-body > div .btn-group > *:not(:first-child) {
  opacity: 0;
  visibility: hidden;
  transition: opacity 200ms linear , visibility 200ms linear ;
  transition-delay: -100ms;
}

.email-nav-body .btn-group button[data-trigger]  {
  box-shadow: none;
}

.email-nav-body .btn-group button[data-trigger] > svg{
  transition: transform 200ms linear;
}

.email-nav-body > div .btn-group.show-opts {
  transform: translateX(0);
}
.email-nav-body > div .btn-group.show-opts > *:not(:first-child) {
  opacity: 1;
  visibility: visible;
  transition-delay: 100ms;
}

.email-nav-body .btn-group.show-opts button[data-trigger]  {
  background-color: var(--falcon-gray-200) !important;
  box-shadow: var(--falcon-btn-box-shadow);
}
.email-nav-body .btn-group.show-opts button[data-trigger] > svg{
  color: #007bff;
  transform: rotate(180deg);
}

.email-content {
  overflow-y: auto;
  border-top-right-radius: 8px;
  border-top-left-radius: 8px;
}

.email-content .email-info {
  grid-template-columns: auto 1fr;
}

.email-content .email-info .sender-name {
  font-weight: 600;
}

.email-content .email-info .sender-email,
.email-content .email-info time {
  opacity: 0.85;
}

/*------ chat panel area---------*/

.chat-group-mem > p:not(:first-child)::before {
  content: "•";
  margin: 0 0.2rem;
  overflow: hidden;
}
/*Overriding the defaults if no group name*/
.chat-no-group-name > p {
  font-size: 0.8333rem !important;
  font-weight: 400;
  color: var(--falcon-heading-color);
  font-family: var(--falcon-font-sans-serif);
}

.chat-container {
  height: calc(100dvh - var(--inbox-header-max-height));
}

.chat-sidebar-overrides {
  left: unset !important;
}

.chat-sidebar-overrides .simplebar-content-wrapper {
  background-color: var(--falcon-chat-contact-bg);
}

.chat-content-overrides {
  display: grid;
}

.chat-content-overrides > * {
  grid-area: 1/1;
  height: 0;
  opacity: 0;
  visibility: hidden;
  display: grid;
  grid-template-rows: auto 1fr auto;
}

.chat-content-overrides .chat-content-header {
  max-height: var(--chat-content-header-max-height);
}

.chat-content-overrides .chat-content-body {
  background: var(--falcon-emphasis-bg);
}

.chat-content-overrides .chat-content-body .offcanvas {
  position: fixed !important;
  top: calc(
    var(--inbox-header-max-height) + var(--chat-content-header-max-height) - 3px
  );
}

.chat-content-overrides .chat-content-body .offcanvas-backdrop {
  z-index: 1;
  top: calc(
    var(--inbox-header-max-height) + var(--chat-content-header-max-height)
  );
}

.chat-content-overrides .chat-editor-area .chat-file-upload,
.chat-content-overrides .chat-editor-area .btn-send {
  z-index: 0 !important;
}

.active-chat {
  z-index: 1;
  height: auto;
  opacity: 1;
  visibility: visible;
}

/* MEDia queries */

@media (max-width: 425px) {
  .chat-content-overrides .chat-content-body .offcanvas {
    width: 100% !important;
  }
}

@media (min-width: 992px) {
  .chat-sidebar-overrides {
    max-width: var(--desktop-left-content-width) !important;
  }

  .chat-content-overrides .chat-content-body .offcanvas {
    max-width: var(--desktop-left-content-width) !important;
    z-index: 1041;
  }

  .chat-content-overrides .chat-content-body .offcanvas-backdrop {
    width: var(--desktop-left-content-width) !important;
    right: 0 !important;
    left: 100% !important;
  }

  .inbox-menu {
    width: var(--desktop-left-content-width) !important;
  }
}

@media (hover: none), (pointer: coarse) {
  .non-hover-show-button {
    display: inline-block !important;
  }
  .email-nav-body .btn-group button[data-trigger]  {
    color: var(--falcon-btn-hover-color);
    background: transparent !important;
  }

}

/*side panel on desktop view*/
@media (min-width: 769px) {
  /*not full screen view*/
  @container side-panel (max-width: 405px) {
    .email-nav-body > div {
      display: grid;
      grid-template-areas: "checkbox content"
    "date date";
      column-gap: 1rem;
      row-gap: .5rem;
    }

    .email-nav-body > div > :nth-child(1) {
      grid-area: checkbox;
      padding: 0;
    }

    .email-nav-body > div > :nth-child(1) .form-check{
      padding: 0;
    }

    .email-nav-body > div > :nth-child(1) svg {
      display: none;
    }

    .email-nav-body > div > :nth-child(1) .form-check .form-check-input{
      margin:0
    }

    .email-nav-body > div > :nth-child(2) {
      grid-area: content;
      width: 100%;
    }

    .email-nav-body > div > :nth-child(2) > div > div {
      /*-webkit-box-flex: 0!important;*/
      /*-ms-flex: 0 0 auto !important;*/
      /*flex: 0 0 auto !important;*/
      width: 33.33333333% !important;
    }

    .email-nav-body > div > :nth-child(3) {
      grid-area: date;
      flex-direction: row !important;
    }

    .email-nav-body > div > :nth-child(3) > span {
      order: 2;
    }

    .email-nav-body > div > :nth-child(3) > svg {
      display: inline-block !important;
      margin: 0;
    }


  }

  /* if panel is in full screen */
  @container side-panel (min-width: 410px) {
    .email-nav-body > div .btn-group {
      /* initially 100% + the matching padding of the parent */
      right: 100% !important;
      bottom: unset !important;
    }

    .email-nav-body > div .btn-group.show-opts {
      transform: translateX(0);
    }
  }

}

@container side-panel (min-width: 768px) {
  .email-nav-body > div .btn-group {
    right: 1.5rem;
    bottom: 0;
  }

  .email-nav-body > div .btn-group.show-opts {
    transform: translateX(.8rem);
  }
}
/* ... */

